--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 							<a class="btn btn-secondary btn-lrg" href="#">Volunteer</a>
 						</div>
 					</div>
+					<div class="rapper">
+						<div class="check">check avalabil</div>
+				        <div class="check">Donate Bikes</div>
+					    <div class="check">voluter whit us</div>
+					</div>
+
+					<div class=""
 					<h2 class="heading-underline">Learn more</h2>
 					<div class="articles">
 						<article class="article">
